--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -44,6 +44,8 @@
           <p><i>You can submit your votes by pressing the SUBMIT BALLOT button below.</i></p>
           <br />
 
+          <!-- Supreme Student Council Section -->
+          <!-- Supreme Student Council Section -->
           <div class="ballot ballot-ssc">
             <br />
             <h3 class="ballot-header ballot-council">Supreme Student Council</h3>
@@ -53,176 +55,150 @@
             <h3 class="ballot-header ballot-position">President</h3>
             <br />
             <div id="ballot-president" class="ballot-choices">
+              <% let abstainPresident = null; %> <% const filteredPresidentCandidates = presidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainPresident = candidate; return false; } return true; }); %> <% filteredPresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-president">
-                <input class="ballot-choice" id="president-1" type="radio" name="president" value="{ id: 'president-id', name: 'President Name', image: 'president-image-url', party: 'president-party', position: 'President', moreInfo: 'Some information about the candidate' }" />
-                <label class="ballot-tile" for="president-1">
-                  <h4 class="party">President Party</h4>
-                  <img class="img-president" src="president-image-url" alt="President Name" />
-                  <h4 class="name">President Name</h4>
+                <input class="ballot-choice" id="president-<%= index %>" type="radio" name="president" value="<%= JSON.stringify(candidate) %>" />
+                <label class="ballot-tile" for="president-<%= index %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-president" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
                   <hr />
-                  <p class="info">Some information about the candidate</p>
+                  <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
+              <% }); %>
             </div>
-
             <br />
-
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-president" name="president" value="Abstain" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-president" name="president" value="<%= abstainPresident ? abstainPresident.uniqueId : '' %>" class="tgl tgl-flip" />
               <label for="abstain-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
             <br />
 
             <!-- Vice President Candidates -->
             <h3 class="ballot-header ballot-position">Vice President</h3>
             <br />
             <div id="ballot-vice-president" class="ballot-choices">
+              <% let abstainVicePresident = null; %> <% const filteredVicePresidentCandidates = vicePresidentCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainVicePresident = candidate; return false; } return true; }); %> <% filteredVicePresidentCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-president">
-                <input class="ballot-choice" id="vice-president-1" type="radio" name="vicePresident" value="{ id: 'vice-president-id', name: 'Vice President Name', image: 'vice-president-image-url', party: 'vice-president-party', position: 'Vice President', moreInfo: 'Some information about the candidate' }" />
-                <label class="ballot-tile" for="vice-president-1">
-                  <h4 class="party">Vice President Party</h4>
-                  <img class="img-vice-president" src="vice-president-image-url" alt="Vice President Name" />
-                  <h4 class="name">Vice President Name</h4>
+                <input class="ballot-choice" id="vice-president-<%= index %>" type="radio" name="vicePresident" value="<%= JSON.stringify(candidate) %>" />
+                <label class="ballot-tile" for="vice-president-<%= index %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-vice-president" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
                   <hr />
-                  <p class="info">Some information about the candidate</p>
+                  <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
+              <% }); %>
             </div>
-
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-vice-president" name="vicePresident" value="Abstain" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-vice-president" name="vicePresident" value="<%= abstainVicePresident ? abstainVicePresident.uniqueId : '' %>" class="tgl tgl-flip" />
               <label for="abstain-vice-president" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
             <br />
 
+            <!-- Senator Candidates -->
             <h3 class="ballot-header ballot-position">Senators</h3>
             <div id="ballot-senator" class="ballot-choices">
+              <% let abstainSenator = null; %> <% const filteredSenatorCandidates = senatorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainSenator = candidate; return false; } return true; }); %> <% filteredSenatorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-senator">
-                <input class="ballot-choice" id="senator-1" type="checkbox" name="senator" value="{ id: 'senator-id', name: 'Senator Name', image: 'senator-image-url', party: 'senator-party', position: 'Senator', moreInfo: 'Some information about the candidate' }" />
-                <label class="ballot-tile" for="senator-1">
-                  <h4 class="party">Senator Party</h4>
-                  <img class="img-senator" src="senator-image-url" alt="Senator Name" />
-                  <h4 class="name">Senator Name</h4>
+                <input class="ballot-choice" id="senator-<%= index %>" type="checkbox" name="senator" value="<%= JSON.stringify(candidate) %>" />
+                <label class="ballot-tile" for="senator-<%= index %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-senator" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
                   <hr />
-                  <p class="info">Some information about the candidate</p>
+                  <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
+              <% }); %>
             </div>
-
+            <br />
+            <div class="checkbox-wrapper-10">
+              <input type="radio" id="abstain-senator" name="senator" value="<%= abstainSenator ? abstainSenator.uniqueId : '' %>" class="tgl tgl-flip" />
+              <label for="abstain-senator" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
+            </div>
             <br />
           </div>
-
           <br />
 
+          <!-- Local Student Council Section -->
           <div class="ballot ballot-lsc">
             <br />
             <h3 class="ballot-header ballot-council">Local Student Council - [Voter College]</h3>
             <br />
             <br />
+
+            <!-- Governor Candidates -->
             <h3 class="ballot-header ballot-position">Governor</h3>
             <br />
             <div id="ballot-governor" class="ballot-choices">
-              <!-- Governor Candidates -->
+              <% let abstainGovernor = null; %> <% const filteredGovernorCandidates = governorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainGovernor = candidate; return false; } return true; }); %> <% filteredGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-governor">
-                <input class="ballot-choice" id="governor-1" type="radio" name="governor" value='{"id":"1", "name":"John Doe", "image":"path/to/image.jpg", "party":"Party A", "position":"governor", "moreInfo":"More info about John Doe"}' />
-                <label class="ballot-tile" for="governor-1">
-                  <h4 class="party">Party A</h4>
-                  <img class="img-governor" src="path/to/image.jpg" alt="John Doe" />
-                  <h4 class="name">John Doe</h4>
+                <input class="ballot-choice" id="governor-<%= index %>" type="radio" name="governor" value="<%= JSON.stringify(candidate) %>" />
+                <label class="ballot-tile" for="governor-<%= index %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-governor" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
                   <hr />
-                  <p class="info">More info about John Doe</p>
+                  <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
-
-              <div class="label-container label-governor">
-                <input class="ballot-choice" id="governor-2" type="radio" name="governor" value='{"id":"2", "name":"Jane Smith", "image":"path/to/image2.jpg", "party":"Party B", "position":"governor", "moreInfo":"More info about Jane Smith"}' />
-                <label class="ballot-tile" for="governor-2">
-                  <h4 class="party">Party B</h4>
-                  <img class="img-governor" src="path/to/image2.jpg" alt="Jane Smith" />
-                  <h4 class="name">Jane Smith</h4>
-                  <hr />
-                  <p class="info">More info about Jane Smith</p>
-                </label>
-              </div>
-              <!-- Add more candidates as needed -->
+              <% }); %>
             </div>
-
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-governor" name="governor" value="Abstain" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-governor" name="governor" value="<%= abstainGovernor ? abstainGovernor.uniqueId : '' %>" class="tgl tgl-flip" />
               <label for="abstain-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
             <br />
+
+            <!-- Vice Governor Candidates -->
             <h3 class="ballot-header ballot-position">Vice Governor</h3>
             <br />
             <div id="ballot-vice-governor" class="ballot-choices">
-              <!-- Vice Governor Candidates -->
+              <% let abstainViceGovernor = null; %> <% const filteredViceGovernorCandidates = viceGovernorCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainViceGovernor = candidate; return false; } return true; }); %> <% filteredViceGovernorCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-vice-governor">
-                <input class="ballot-choice" id="vice-governor-1" type="radio" name="viceGovernor" value='{"id":"1", "name":"Alex Brown", "image":"path/to/image3.jpg", "party":"Party C", "position":"vice governor", "moreInfo":"More info about Alex Brown"}' />
-                <label class="ballot-tile" for="vice-governor-1">
-                  <h4 class="party">Party C</h4>
-                  <img class="img-vice-governor" src="path/to/image3.jpg" alt="Alex Brown" />
-                  <h4 class="name">Alex Brown</h4>
+                <input class="ballot-choice" id="vice-governor-<%= index %>" type="radio" name="viceGovernor" value="<%= JSON.stringify(candidate) %>" />
+                <label class="ballot-tile" for="vice-governor-<%= index %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-vice-governor" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
                   <hr />
-                  <p class="info">More info about Alex Brown</p>
+                  <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
-
-              <div class="label-container label-vice-governor">
-                <input class="ballot-choice" id="vice-governor-2" type="radio" name="viceGovernor" value='{"id":"2", "name":"Chris Green", "image":"path/to/image4.jpg", "party":"Party D", "position":"vice governor", "moreInfo":"More info about Chris Green"}' />
-                <label class="ballot-tile" for="vice-governor-2">
-                  <h4 class="party">Party D</h4>
-                  <img class="img-vice-governor" src="path/to/image4.jpg" alt="Chris Green" />
-                  <h4 class="name">Chris Green</h4>
-                  <hr />
-                  <p class="info">More info about Chris Green</p>
-                </label>
-              </div>
-              <!-- Add more candidates as needed -->
+              <% }); %>
             </div>
-
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-vice-governor" name="viceGovernor" value="Abstain" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-vice-governor" name="viceGovernor" value="<%= abstainViceGovernor ? abstainViceGovernor.uniqueId : '' %>" class="tgl tgl-flip" />
               <label for="abstain-vice-governor" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
-
             <br />
+
+            <!-- Board Member Candidates -->
             <h3 class="ballot-header ballot-position">Board Member</h3>
             <br />
             <div id="ballot-board-member" class="ballot-choices">
-              <!-- Board Member Candidates -->
+              <% let abstainBoardMember = null; %> <% const filteredBoardCandidates = boardCandidates.filter(function(candidate) { if(candidate.name.toLowerCase() === 'abstain'){ abstainBoardMember = candidate; return false; } return true; }); %> <% filteredBoardCandidates.forEach(function(candidate, index) { %>
               <div class="label-container label-board-member">
-                <input class="ballot-choice" id="board-member-1" type="radio" name="boardMember" value='{"id":"1", "name":"Emily White", "image":"path/to/image5.jpg", "party":"Party E", "position":"board member", "moreInfo":"More info about Emily White"}' />
-                <label class="ballot-tile" for="board-member-1">
-                  <h4 class="party">Party E</h4>
-                  <img class="img-board-member" src="path/to/image5.jpg" alt="Emily White" />
-                  <h4 class="name">Emily White</h4>
+                <input class="ballot-choice" id="board-member-<%= index %>" type="radio" name="boardMember" value="<%= JSON.stringify(candidate) %>" />
+                <label class="ballot-tile" for="board-member-<%= index %>">
+                  <h4 class="party"><%= candidate.party %></h4>
+                  <img class="img-board-member" src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                  <h4 class="name"><%= candidate.name %></h4>
                   <hr />
-                  <p class="info">More info about Emily White</p>
+                  <p class="info"><%= candidate.moreInfo %></p>
                 </label>
               </div>
-
-              <div class="label-container label-board-member">
-                <input class="ballot-choice" id="board-member-2" type="radio" name="boardMember" value='{"id":"2", "name":"Michael Blue", "image":"path/to/image6.jpg", "party":"Party F", "position":"board member", "moreInfo":"More info about Michael Blue"}' />
-                <label class="ballot-tile" for="board-member-2">
-                  <h4 class="party">Party F</h4>
-                  <img class="img-board-member" src="path/to/image6.jpg" alt="Michael Blue" />
-                  <h4 class="name">Michael Blue</h4>
-                  <hr />
-                  <p class="info">More info about Michael Blue</p>
-                </label>
-              </div>
-              <!-- Add more candidates as needed -->
+              <% }); %>
             </div>
-
             <br />
             <div class="checkbox-wrapper-10">
-              <input type="checkbox" id="abstain-board-member" name="boardMember" value="Abstain" class="tgl tgl-flip" />
+              <input type="radio" id="abstain-board-member" name="boardMember" value="<%= abstainBoardMember ? abstainBoardMember.uniqueId : '' %>" class="tgl tgl-flip" />
               <label for="abstain-board-member" data-tg-on="I will vote!" data-tg-off="Abstain" class="tgl-btn"></label>
             </div>
 
